Adding to swagger
